--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/product
-spring.datasource.username=Ednaldo
+spring.datasource.username=postgres
 spring.datasource.password=12345
